Max size for champion portrait and scaling fix
Currently, Wukong's portrait is loading the wrong image from ddragon. As seen here: http://champion.gg/champion/MonkeyKing (as of 6.1.1 patch). 

It's just loading a 1000x1000px green box and because there is no size limit on the site, it's covering the whole page. This change will prevent that from happening again. 

Also for the small champion portraits, added "translateZ(0)" to fix the blurriness on Chrome.

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1290,7 +1290,7 @@ margin-right: 6px;
   width:42%;
 }
 .summary-side .matchup-champion {
-  transform: scale(0.7);
+  transform: translateZ(0) scale(0.7);
   margin-left: -4px
 }
 .summary-side .table .champion-name{
